assets/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&display=swap');
	:root {
		font-family: 'Ubuntu', sans-serif;

		/* dark mode */
		--color-base: hsl(215, 20%, 65%);
		--color-mid: hsl(215, 19%, 30%);
		--color-dim: hsl(217, 33%, 15%);
		--color-stark: #000000;
		--color-invert: #ffffff;
		--color-top-light: #6c87ac;
		--color-top-dark: #2e3d52;
		--color-top: #2e3d52;
		--color-neo: linear-gradient(145deg, hsl(215, 28%, 40%), hsl(215, 28%, 30%));
		--color-svg-1: invert();
		--color-svg: ;
		--bg: linear-gradient(0deg, rgba(16, 22, 35, 1) 0%, var(--color-top-dark) 100%);

		width: 100vw;
		height: 100vh;
		overflow: hidden;
	}

	.light {
		--bg: linear-gradient(0deg, rgba(62, 87, 128, 1) 0%, var(--color-top-light) 100%);
		--color-svg: invert();
		--color-svg-1: ;
		--color-neo: linear-gradient(145deg, hsl(215, 28%, 20%), hsl(215, 28%, 15%));
		--color-top: #6c87ac;
		--color-base: #1e293b;
		--color-mid: #475569;
		--color-dim: #94a3b8;
		--color-stark: #ffffff;
		--color-invert: #000000;
	}

	.gradient {
		background: var(--bg);
		background-size: 100vw 100vh;
	}

	.inv {
		filter: var(--color-svg);
	}

	.inv-1 {
		filter: var(--color-svg-1);
	}

	.no-move {
		user-drag: none;
		user-select: none;
	}

	.my-col-2 {
		grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
	}

	.my-col-3 {
		grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
	}

	.my-shadow {
		box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.75);
	}
	.hover-fade {
		opacity: 40%;
		transition: all 150ms ease-in-out;
	}

	.hover-fade:hover {
		opacity: 100%;
	}

	.top-calc {
		top: calc(100% + 0.25em);
	}

	.smooth {
		transition: all 75ms ease-in-out;
	}

	/* ----------- Login section --------------- */

	.field::after {
		content: '';
		position: relative;
		display: block;
		height: 4px;
		width: 100%;
		background-color: #3a4972;
		transform: scaleX(0);
		transform-origin: 0%;
		transition: transform 500ms ease;
		top: 2px;
	}
	.input {
		outline: none;
		border: none;
		overflow: hidden;
		margin: 0;
		width: 100%;
		padding: 0.25rem 0;
		background: none;
		color: var(--color-invert);
		font-size: 1.2em;
		font-weight: bold;
		transition: border 500ms;
	}

	.field:focus-within {
		border-color: transparent;
	}

	.field:focus-within::after {
		transform: scaleX(1);
	}

	.label {
		color: var(--color-invert);
		position: absolute;
		transform: translateY(0.5rem);
		transform-origin: 0%;
		transition: transform 400ms;
	}

	.field:focus-within .label,
	.input:not(:placeholder-shown) + .label {
		transform: scale(0.8) translateY(-1.5rem);
	}

	.bot-dash {
		border-bottom: 2px dashed var(--color-invert);
	}
}

